# cplus2

./: .gitignore  CMakeLists.txt  test.c
src/: emit.c  emit.h  main.c  main.h  parse.c  parse.h  syntax.c  syntax.h  types.h
